syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc InitializeConnection(InitializeConnectionRequest) returns (InitializeConnectionResponse);
  rpc SubscribeToServerMessages(SubscribeToServerMessagesRequest) returns (stream ServerMessage);
  rpc SubscriptionPing(SubscriptionPingRequest) returns (SubscriptionPingResponse);
}

message InitializeConnectionRequest {}

message InitializeConnectionResponse {
  string subscriber_id = 1;
}

message SubscribeToServerMessagesRequest {
  string subscriber_id = 1;
}

message SubscriptionPingRequest {
  string subscriber_id = 1;
}

message SubscriptionPingResponse {}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ServerMessage {
  string message = 1;
}